# Uav_lab

./: README.md  drone2.py  drone3.py  drone6.py  drone6操作流程.txt  注意事项！.txt
Other Documents/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Other Documents/catkin_ws/devel/: .catkin
Other Documents/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
Other Documents/catkin_ws/devel/.private/coordination/: .rosinstall
Other Documents/catkin_ws/logs/tag_detection/: build.cmake.000.log.stderr
Other Documents/catkin_ws/src/coordination/: CMakeLists.txt
Other Documents/catkin_ws/src/coordination/launch/: coordinator.launch
Other Documents/catkin_ws/src/coverage_planner/: CMakeLists.txt
Other Documents/catkin_ws/src/multi_uav_bringup/: CMakeLists.txt
Other_Documents/catkin_ws/src/simulation_world/: CMakeLists.txt  package.xml
Other_Documents/catkin_ws/src/simulation_world/worlds/: uav_search_world.world
Other_Documents/catkin_ws/src/tag_detection/: package.xml
Other_Documents/crazyswarm/scripts/: boustrophedon_path.py  ox_plow.py  test2plane.py  testU.py  testcmdPosition.py  two_cf_boustro.py
coordination/: CMakeLists.txt  package.xml
coordination/src/: coordinator_node.py
coverage_planner/: CMakeLists.txt  package.xml
coverage_planner/config/: area.yaml
coverage_planner/launch/: planner_example.launch
coverage_planner/src/: coverage_planner_node.py
simulation_world/: CMakeLists.txt  package.xml
simulation_world/worlds/: dual_uav_world.world
tag_detection/: CMakeLists.txt
(+41 files in other folders)
